# Mellodica

./: .gitignore  CMakeLists.txt  README.md  a.out  game_save.ckpt  makefile
.github/workflows/: cmake-multi-platform.yml  release.yml
assets/: mellodica.desktop
assets/levels/: entity_tiles.tsx  level0.tmx  level0_objects.csv  level0_terrain.csv  level1-1.csv  level1.tmx  level1_objects.csv  level1_terrain.csv  level2.tmx  level2_objects.csv  level2_terrain.csv  level3.tmx  level3_objects.csv  level3_terrain.csv  levelTeste.csv  terrain_tiles.tsx
assets/shaders/: Base.frag  Base.vert  Bloom.frag  Framebuffer.frag  HUD.frag  HUD.vert  Mesh.frag  Screenspace.vert  Sprite.frag  Toon.frag
assets/songs/: 1.mid  2.mid  3.mid  6.mid  7.mid  8.mid  a0.mid  a1.mid  a1.txt  a2.mid  a2b.mid  a4.mid  instruments.txt  main_theme.mid
assets/sprites/: box.json  cubes.json  floor.png~  main-character.json  medium_nature.json  robot1.pxo  tree.json  wall.png~
assets/sprites/level0/: .floor.png-autosave.kra  .wall.png-autosave.kra  floor.png~  wall.png~
assets/sprites/level1/: floor.json
assets/sprites/level2/: floor.png~  grass.json  medium_nature.png~  wall.json
assets/sprites/main-character/: main-character.json  player.json
assets/sprites/robots/: ghost.json  robot.json  robotB.json
assets/sprites/textures/: cubes.json  level2-new-floor-grass2.png~
assets/textures/: shine.json
assets/textures/hud/: hud.json
include/: AssetLoader.hpp  CSV.h  Camera.hpp  ChunkGrid.hpp  Game.hpp  Input.hpp  Math.hpp
include/MIDI/: MIDIPlayer.hpp  SynthEngine.hpp
include/MIDI/MIDIParser/: BaseChunk.h  Event.h  HeaderChunk.h  MTrkEvent.h  MetaEvent.h  Midi.h  MidiEvent.h  Options.h  ReadNumber.h  SysExEvent.h  TrackChunk.h  VLQ.h  types.h
include/UI/: HUDElement.hpp  TextElement.hpp  UIButton.hpp
include/UI/Screen/: BattleScreen.hpp  CreditsScreen.hpp  GameOverScreen.hpp  MainMenuScreen.hpp  OpeningScreen.hpp  PauseScreen.hpp  PlayerHud.hpp  TutorialScreen.hpp  UIScreen.hpp
include/actors/: Actor.hpp  BattleSystem.hpp  Combatant.hpp  EnemyGroup.hpp  GameActors.hpp  Ghost.hpp  HUDElement.hpp  Human.hpp  NoteActor.hpp  NotePlayerActor.hpp  Player.hpp  PuzzleActors.hpp  RobotA.hpp  SceneActors.hpp  ShineActor.hpp  TestActors.hpp  TileActor.hpp
include/components/: ColliderComponent.hpp  Component.hpp  DrawComponent.hpp  MelodyComponent.hpp  MeshComponent.hpp  NotePlayerComponent.hpp  RigidBodyComponent.hpp  SpriteComponent.hpp
include/render/: Camera.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  TextureAtlas.hpp
include/scenes/: CreditsScene.hpp  GameOver.hpp  Level0.hpp  Level1.hpp  Level2.hpp  Level3.hpp  MainMenu.hpp  OpeningScene.hpp  Scene.hpp  TestScene.hpp
src/: CSV.cpp  Camera.cpp  ChunkGrid.cpp  Game.cpp  main.cpp
src/MIDI/: MIDIPlayer.cpp  SynthEngine.cpp
src/MIDI/MIDIParser/: BaseChunk.cpp  Event.cpp  HeaderChunk.cpp  MTrkEvent.cpp  MetaEvent.cpp  Midi.cpp  MidiEvent.cpp  ReadNumber.cpp  SysExEvent.cpp  TrackChunk.cpp  VLQ.cpp
src/UI/: HUDElement.cpp  TextElement.cpp  UIButton.cpp
src/UI/Screen/: BattleScreen.cpp  CreditsScreen.cpp  GameOverScreen.cpp  MainMenuScreen.cpp  OpeningScreen.cpp  PauseScreen.cpp  PlayerHud.cpp  TutorialScreen.cpp  UIScreen.cpp
src/actors/: Actor.cpp  BattleSystem.cpp  Combatant.cpp  EnemyGroup.cpp  GameActors.cpp  Ghost.cpp  HUDElement.cpp  Human.cpp  Input.cpp  NoteActor.cpp  NotePlayerActor.cpp  Player.cpp  PuzzleActors.cpp  RobotA.cpp  SceneActors.cpp  ShineActor.cpp  TestActors.cpp
src/components/: ColliderComponent.cpp  Component.cpp  DrawComponent.cpp  MelodyComponent.cpp  MeshComponent.cpp  NotePlayerComponent.cpp  RigidBodyComponent.cpp  SpriteComponent.cpp
src/render/: Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp
src/scenes/: CreditsScene.cpp  GameOver.cpp  Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  MainMenu.cpp  OpeningScene.cpp  Scene.cpp  TestScene.cpp
